--- a/index.html
+++ b/index.html
@@ -74,10 +74,23 @@
         </div>
       </div>
       <div class="card" id="event_4">
+        <h3>Diary of a not-at-all wimpy kid!</h3>
+        <p>A story, as told by Christina:</p>
+        <blockquote>
+          Diana broke her foot playing softball in middle school and had to have surgery on it.
+          She was absolutely devastated because she was unable to dance in the upcoming recital that she had been preparing for.
+          It was her first time wearing pointe shoes in her ballet class and she was supposed to perform the dance doing a lot of technique up on her toes.
+          But through hard work and dedication, in a short amount of time, she built back some strength in her foot, and was allowed to perform in the recital.
+          She was able to be in the section of girls that had pointe shoes on in her ballet class. She still could not perform the dance in her pointe shoes,
+          but she wore her flat ballet shoes and performed the dance number that way. She danced and performed so well that you could not even tell that
+          she was wearing flat ballet shoes instead of pointe shoes.
+        </blockquote>
+      </div>
+      <div class="card" id="event_5">
         <h3>Begins Dancing Career</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
       </div>
-      <div class="card" id="event_5">
+      <div class="card" id="event_6">
         <h3>High School</h3>
         <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught Dance with Kathy Bunker at Bunker Dance Center for one year. Her friendship with Kathy is still alive today,
           a testament to the kind, sweet people both Diana and Kathy are.  Bunker Dance Studio alumni include Aaron Turner (So You Think You Can Dance, season 10),
@@ -87,32 +100,33 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_6">
+
+      <div class="card" id="event_7">
         <h3>College</h3>
         <p>2005 - attended a semester at Utah Valley State College in Orem, Utah.
           Majored in Dance and was a member of the Dance Team.  Was part of the Dance team that placed NDA 9th place Division 2-Team Dance.</p>
       </div>
-      <div class="card" id="event_7">
+      <div class="card" id="event_8">
         <h3>Seven Brides in Mormon Country</h3>
         <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical
           for the St. George Musical Theater. This was the beginning
         of her performing regularly for the theater for the next 2 years. She also
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
       </div>
-      <div class="card" id="event_8">
+      <div class="card" id="event_9">
         <h3>Student of the Year (was there ever any question?)</h3>
         <p>2007 - attended Dixie State College in St. George, Utah, for two semesters.
           She majored in Dance and was a member of the Dance Company, where she won the 	&#8220;Student of the Year&#8221; award in the Dance Department.</p>
       </div>
-      <div class="card" id="event_9">
+      <div class="card" id="event_10">
         <h3>Marriage</h3>
         <p>2008 - Married her first husband</p>
       </div>
-      <div class="card" id="event_10">
+      <div class="card" id="event_11">
         <h3>Gave birth to her first son</h3>
         <p>2008 - A beautiful soul comes into the world.  And his name shall be ... Alec</p>
       </div>
-      <div class="card" id="event_11">
+      <div class="card" id="event_12">
         <h3>Broadway Debut</h3>
         <p>2010 - performed in Andrew Lloyd Webber’s international phenomenon and
           the second-longest-running show on Broadway, CATS, as performed at the
@@ -125,20 +139,20 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
       </div>
-      <div class="card" id="event_12">
+      <div class="card" id="event_14">
         <h3>Divorce</h3>
         <p>2017 - After her divorce, Diana found the strength and courage to create a new life for her and her two children while still showing compassion and caring as a co-parent.</p>
       </div>
-      <div class="card" id="event_14">
+      <div class="card" id="event_15">
         <h3>Pathways</h3>
         <p>2018 - attended Pathways at BYU-Idaho. Began what would be one of her favorite jobs working
           at the Jordan River Temple while simultaneously teaching at a local Ballet studio.</p>
       </div>
-      <div class="card" id="event_15">
+      <div class="card" id="event_16">
         <h3>LDS Business College</h3>
         <p>2019 - attended LDS Business College for 3 semesters</p>
       </div>
-      <div class="card" id="event_16">
+      <div class="card" id="event_17">
         <h3>New Love</h3>
         <p>2019 - meets the love of her life</p>
         <figure>
@@ -146,21 +160,22 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_17">
+      <div class="card" id="event_18">
         <h3>Engagement</h3>
         <p>2019 - only one month later, he couldn&#8217;t wait any longer,
           so underneath a star-filled summer night, on the backyard trampoline, he proposes to the love of his life!</p>
       </div>
-      <div class="card" id="event_18">
+      <div class="card" id="event_19">
         <h3>Marriage</h3>
         <p>2019 - just two days short of two months after meeting,
           she and her husband get married in the bishop&#8217;s office with only her,
           her husband, the bishop, and her two children attending.</p>
 
       </div>
-      <div class="card" id="event_19">
+      <div class="card" id="event_20">
         <h3>A (New) Family: a Proclamation!</h3>
-        <p>2019 - becomes a step-parent to three beautiful girls</p>
+        <p>2019 - As part of marrying her new husband, Diana would lovingly and gracefully take on the responsibility and title of "bonus-mom"
+          to three beautiful girls who would quickly come to love her kind, fun, and ever-patient influence on them.</p>
         <figure>
           <img class="img-proclamation" src="assets/family_proclamation.png"></img>
           <figcaption class="fig-cation-19">The Family: A Proclamation To The World, states that 	&#8220; marriage  between a man and a woman is ordained of God
@@ -169,7 +184,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
             have to stop trying to tell us we hadn&#8217;t actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
         </figure>
       </div>
-      <div class="card" id="event_20">
+      <div class="card" id="event_21">
         <h3>Westward HO!</h3>
         <p>2019 - lived in West Jordan, Utah</p>
       </div>
@@ -233,7 +248,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_30">
         <h3>Child Number 6!</h3>
-        <p>2020 - gives birth to a beautiful baby girl!</p>
+        <p>2020 - Diana gives birth to a beautiful baby girl. To her husband's dismay and to everyone else's delight she ixnays's naming her Khmer, and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
         <figure>
           <img class="img-hospital" src="assets/BrooklynnOnMama.jpg"></img>
           <figcaption></figcaption>
@@ -253,7 +268,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
           Also attending were Brian and Christina and Genesis, Maya, and Skylar.</p>
       </div>
-      <div class="card" id="event_33">
+      <div class="card" id="event_32">
         <h3>Finally, a Real Honeymoon</h3>
         <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would be an amazing time of friendship, bonding, adventure, scary heights,
           wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
@@ -279,10 +294,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Conquering</h3>
         <p>2021 - Finishes the last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
-    </main>
       </div>
-            <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a></p>
-            <script src="./js/scripts.js"></script>
+      <div>
+        <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a>
+        </p>
+      </div>
+    </main>
+        <script src="./js/scripts.js"></script>
             <script src="./js/button.js"></script>
             <script src="./js/visibility.js"></script>
           </body>
