--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
       <div class="card first-card" id="event_1">
         <h3>Birth</h3>
-        <p class="flush-right">1985: Heavenly Father (and Mother) send their special warrior Princess to earth to join her family in Murray, Utah.</p>
+        <p class="flush-right right-modified">1985: Heavenly Father (and Mother) send their special warrior Princess to earth to join her family in Murray, Utah.</p>
         <blockquote>When Diana came into the world, she came smiling! She always had the biggest smile, which came from the biggest heart. People loved her everywhere she went. <br><br>-- Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_2">
@@ -69,15 +69,20 @@
           passionate that burns &#8217;till this day.</p>
       </div>
       <div class="card" id="event_3">
+        <h3>A baby Sister!</h3>
+        <p>1989 - Just a few years after joining the great big world, Diana would welcome in a new sister, who would become one of her best friends.</p>
+          <blockquote>&#8220;Diana showed her sweet spirit at an early age. She was around two or three when Christina was Born.
+            As she held her on her Lap for the first time she looked up and said &lsquo;do you want to kiss her?&rsquo;&#8221;<br><br>--Dennis Bedford</blockquote>
+      </div>
+      <div class="card" id="event_4">
         <h3>Early Life</h3>
         <p>1990 - Diana&#8217;s family moved to Las Vegas, Nevada, where she grew up.</p>
         <div class="vegas">
           <img src="new_assets/las_vegas_city_map_panoramic_graphic_art.jpg" class="img-vegas">
         </div>
       </div>
-      <div class="card" id="event_4">
+      <div class="card" id="event_5">
         <h3>Diary of a not-at-all wimpy kid!</h3>
-        <p>A story, as told by Christina:</p>
         <blockquote>
           Diana broke her foot playing softball in middle school and had to have surgery on it.
           She was absolutely devastated because she was unable to dance in the upcoming recital that she had been preparing for.
@@ -85,14 +90,15 @@
           But through hard work and dedication, in a short amount of time, she built back some strength in her foot, and was allowed to perform in the recital.
           She was able to be in the section of girls that had pointe shoes on in her ballet class. She still could not perform the dance in her pointe shoes,
           but she wore her flat ballet shoes and performed the dance number that way. She danced and performed so well that you could not even tell that
-          she was wearing flat ballet shoes instead of pointe shoes.
+          she was wearing flat ballet shoes instead of pointe shoes.<br><br>
+          --Christina Dowuona-Hammond.
         </blockquote>
       </div>
-      <div class="card" id="event_5">
+      <div class="card" id="event_6">
         <h3>Begins Dancing Career</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
       </div>
-      <div class="card" id="event_6">
+      <div class="card" id="event_7">
         <h3>High School</h3>
         <p>2004 - graduated from Bonanza High School in Las Vegas, NV. Taught Dance with Kathy Bunker at Bunker Dance Center for one year. Her friendship with Kathy is still alive today,
           a testament to the kind, sweet people both Diana and Kathy are.  Bunker Dance Studio alumni include Aaron Turner (So You Think You Can Dance, season 10),
@@ -103,12 +109,12 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         </figure>
       </div>
 
-      <div class="card" id="event_7">
+      <div class="card" id="event_8">
         <h3>College</h3>
         <p>2005 - attended a semester at Utah Valley State College in Orem, Utah.
           Majored in Dance and was a member of the Dance Team.  Was part of the Dance team that placed NDA 9th place Division 2-Team Dance.</p>
       </div>
-      <div class="card" id="event_8">
+      <div class="card" id="event_9">
         <h3>Seven Brides in Mormon Country</h3>
         <p>2006 - performed in "Seven Brides for Seven Brothers", her first musical
           for the St. George Musical Theater. This was the beginning
@@ -123,16 +129,16 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_9">
+      <div class="card" id="event_10">
         <h3>Student of the Year (was there ever any question?)</h3>
         <p>2007 - attended Dixie State College in St. George, Utah, for two semesters.
           She majored in Dance and was a member of the Dance Company, where she won the &#8220;Student of the Year&#8221; award in the Dance Department.</p>
       </div>
-      <div class="card" id="event_10">
+      <div class="card" id="event_11">
         <h3>Marriage</h3>
         <p>2008 - Married her first husband</p>
       </div>
-      <div class="card" id="event_11">
+      <div class="card" id="event_12">
         <h3>Gave birth to her first son</h3>
         <p>2008 - A beautiful soul comes into the world.  And his name shall be ... Alec</p>
         <figure class="figure-alec">
@@ -140,7 +146,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <figcaption class="fig-caption-11 flush-right">Picture of Alec when he was a toddler.  Alec has been a great defender to his Mom and younger siblings.  And he has a very, very special place in his mother's heart.</figcaption>
       </figure>
       </div>
-      <div class="card" id="event_12">
+      <div class="card" id="event_13">
         <h3>Broadway Debut</h3>
         <p>2010 - performed in Andrew Lloyd Webber’s international phenomenon and
           the second-longest-running show on Broadway, CATS, as performed at the
@@ -150,7 +156,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <img src="new_assets/cats_backstage.jpg" id="tuachan_group_selfie"><img>
         <img src="new_assets/cats_en_pointe.jpg"><img>
       </div>
-      <div class="card" id="event_13">
+      <div class="card" id="event_14">
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
         <figure>
@@ -188,20 +194,20 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption class="flush-right">Katherine watches a movie with one of her favorite blankets in the rocking chair Diana rocked her to sleep in so many times as a child.</figcaption>
         </figure>
       </div>
-      <div class="card" id="event_14">
+      <div class="card" id="event_15">
         <h3>Divorce</h3>
         <p>2017 - After her divorce, Diana found the strength and courage to create a new life for her and her two children while still showing compassion and caring as a co-parent.</p>
       </div>
-      <div class="card" id="event_15">
+      <div class="card" id="event_16">
         <h3>Pathways</h3>
         <p>2018 - attended Pathways at BYU-Idaho. Began what would be one of her favorite jobs working
           at the Jordan River Temple while simultaneously teaching at a local Ballet studio.</p>
       </div>
-      <div class="card" id="event_16">
+      <div class="card" id="event_17">
         <h3>LDS Business College</h3>
         <p>2019 - attended LDS Business College for 3 semesters</p>
       </div>
-      <div class="card" id="event_17">
+      <div class="card" id="event_18">
         <h3>New Love</h3>
         <p>2019 - meets the love of her life</p>
         <figure>
@@ -209,19 +215,19 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_18">
+      <div class="card" id="event_19">
         <h3>Engagement</h3>
         <p>2019 - only one month later, he couldn&#8217;t wait any longer,
           so underneath a star-filled summer night, on the backyard trampoline, he proposes to the love of his life!</p>
       </div>
-      <div class="card" id="event_19">
+      <div class="card" id="event_20">
         <h3>Marriage</h3>
         <p>2019 - just two days short of two months after meeting,
           she and her husband get married in the bishop&#8217;s office with only her,
           her husband, the bishop, and her two children attending.</p>
 
       </div>
-      <div class="card" id="event_20">
+      <div class="card" id="event_21">
         <h3>A (New) Family: a Proclamation!</h3>
         <p>2019 - As part of marrying her new husband, Diana would lovingly and gracefully take on the responsibility and title of "bonus-mom"
           to three beautiful girls who would quickly come to love her kind, fun, and ever-patient influence on them.</p>
@@ -233,24 +239,24 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
             have to stop trying to tell us we hadn&#8217;t actually gotten married in the first place.  We only &#8220;kind of&#8221; got married!  &#129315; &#129335; &#129315; &#129335; &#129315; &#129335;</figcaption>
         </figure>
       </div>
-      <div class="card" id="event_21">
+      <div class="card" id="event_22">
         <h3>Westward HO!</h3>
         <p>2019 - moved to West Jordan, Utah</p>
       </div>
-      <div class="card" id="event_21">
+      <div class="card" id="event_23">
         <h3>Oh, Lugnuts!</h3>
         <p>2019 - Her husband&#8217;s car breaks down, so for three months, over three separate repairs,
           they have to take turns taking the car to work or school while the other takes the train</p>
       </div>
-      <div class="card" id="event_22">
+      <div class="card" id="event_24">
         <h3>Tragedy</h3>
         <p>2020 - Hold&#8217;s her sister&#8217;s hand as she struggles with the loss of her second child</p>
       </div>
-      <div class="card" id="event_23">
+      <div class="card" id="event_25">
         <h3>A Room with a View</h3>
         <p>2020 - gives up her lovely 3rd story apartment with a view of the mountains for a basement apartment with cheaper rent and larger space</p>
       </div>
-      <div class="card" id="event_24">
+      <div class="card" id="event_26">
         <h3>Pandemic</h3>
         <p>2020 - the pandemic forces her to learn to home school her children,
           while getting cut off from her own professors and having to pivot to a virtual school environment.
@@ -265,16 +271,16 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           Animation provided by Centers of Disease Control (CDC), &#8220;https://www.cdc.gov/media/b_roll.html&#8221; Used under public domain.</figcaption>
       </figure>
       </div>
-      <div class="card" id="event_25">
+      <div class="card" id="event_27">
         <h3>You&#8217;re Prego?!?!</h3>
         <p>2020 - finds out that 5 months into her marriage, amidst adjusting to a new family,
           she will be bringing child number 6 into her your&#8217;s-mine-and-ours family</p>
       </div>
-      <div class="card" id="event_26">
+      <div class="card" id="event_28">
         <h3>SLC</h3>
         <p>2020 - began school at Salt Lake Community College to prepare for Nursing School.</p>
       </div>
-      <div class="card" id="event_27">
+      <div class="card" id="event_29">
         <h3>Earthquake !!!</h3>
         <p>2020 - Diana and Trevor would wake up on the third story to their entire apartment swaying uncontrollably for several minutes.
           The worst shockwave measured 6.5 earthquake, just 14 miles from their house. Deseret News would report, <blockquote>&#8220;An early-morning, 5.7 magnitude earthquake centered
@@ -283,19 +289,19 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
           but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;</blockquote></p>
       </div>
-      <div class="card" id="event_28">
+      <div class="card" id="event_30">
         <h3>Riots</h3>
         <p>In the wake of the George Floyd killings, riots would erupt across the entire United States.
           For the first time in memory, rioters would hit Salt Lake City, where police cars would be overturned and set on fire,
           looters would be threatened by a mad man with a bow and arrow,
           and in Provo, an elderly man would be shot repeatedly by rioters as he tried to maneuver past a roadblock.</p>
       </div>
-      <div class="card" id="event_29">
+      <div class="card" id="event_31">
         <h3>Presidential Elections</h3>
         <p>Presidential Elections would be historic in seeing the first Black woman Vice-President,
           but would also lead to a near coup d&#8217;é·tat as rioters ransacked the capital of the nation.</p>
       </div>
-      <div class="card" id="event_30">
+      <div class="card" id="event_32">
         <h3>Child Number 6!</h3>
         <p>2020 - Diana gives birth to a beautiful baby girl. To her husband's dismay and to everyone else's delight she ixnays's naming her Khmer, and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
         <figure>
@@ -303,7 +309,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_31">
+      <div class="card" id="event_33">
         <h3>Sealed with a kiss!</h3>
         <p>2020 - COVID restrictions, finally letting these two sweet lovebirds have the chance to be sealed in the Jordan River Temple.
           Restrictions were such that only one family could be in the temple at a time, leaving the temple a virtual ghost town
@@ -317,7 +323,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           because she cried every minute of the whole process until they brought her in to see her mommy. And then she was as quiet as a church mouse.
           Also attending were Brian and Christina and Genesis, Maya, and Skylar.</p>
       </div>
-      <div class="card" id="event_32">
+      <div class="card" id="event_34">
         <h3>Finally, a Real Honeymoon</h3>
         <p>2021 - almost two years after getting married finally goes on a honeymoon to Colorado.  It would be an amazing time of friendship, bonding, adventure, scary heights,
           wonderful food, a handful of miracles, and one disastrous mistake that turned out to  be the best thing that could have happened.</p>
@@ -331,19 +337,19 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           <figcaption></figcaption>
         </figure>
       </div>
-      <div class="card" id="event_33">
+      <div class="card" id="event_35">
         <h3>Deployment X 4</h3>
         <p>2021 - Diana persists through mothering, step-mothering, and schooling alone while husband deploys with the Army four times.  Once for three weeks to Ft. Sam Houston for ALC training. Twice for COVID-19, which although were still local, basically made him work another full-time job.  And finally, was the almost-to-Afghanistan deployment where we went through all the physical, mental and emotional prepartion, but two day's before boots-on-the-ground the President pulled out.</p>
       </div>
-      <div class="card" id="event_34">
+      <div class="card" id="event_36">
         <h3>More Tragedy</h3>
         <p>2021 - remains strong during the loss of her father-in-law, with whom she had a very close relationship</p>
       </div>
-      <div class="card" id="event_35">
+      <div class="card" id="event_37">
         <h3>Conquering</h3>
         <p>2021 - Finishes the last prerequisite for nursing school just short of an 	&#8220;A&#8221; even while she and her family were plagued by COVID-19 for a month.</p>
       </div>
-      <div class="card" id="event_36">
+      <div class="card" id="event_38">
         <h3>And the Show Must Go On!</h3>
         <p>Although the last two years I have spent with this true princess and sweet daughter of Heavenly Parents have had the highest concentration of external pressure I've ever known, there is no other person I would rather make this journey with.  She is truly the kindest, most amazing person I have ever known.  I love you Sweetheart!</p>
         <figure>
